src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws1-wfsAU-spB2.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-1\nwant fullscreen: AU\nset parent: B2"
expression: snapshot
---
final monitor: headless-1
final workspace: 0 (ws-1)

initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
